Criação de responsividade para dispositivos moveis

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
    <!-- css -->
    <link rel='stylesheet' type='text/css' media='screen' href='CSS/reset.css'>
    <link rel='stylesheet' type='text/css' media='screen' href='CSS/main.css'>
+   <link rel='stylesheet' type='text/css' media='screen' href='CSS/responsivo.css'>
+
    
    <!-- fontes -->
    <link href="https://fonts.googleapis.com/css2?family=Grand+Hotel&family=Nunito:wght@300;400;500;700&display=swap" rel="stylesheet">
