Criação de interatividade em menu

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
    <title>Seu Peso</title>
    <meta name='viewport' content='width=device-width, initial-scale=1'>
+   <link rel="shortcut icon" href="Conteudo/weight.svg" type="image/x-icon">
    
    <!-- css -->
    <link rel='stylesheet' type='text/css' media='screen' href='CSS/reset.css'>
@@ -26,9 +27,9 @@
          
          <nav class="menu_nav">
             <ul class="menu_lista">
-               <li class="item_menu">Inicio</li>
-               <li class="item_menu">Sobre nos</li>
-               <li class="item_menu">Registre</li>
+               <li class="item_menu"><a href="#">Inicio</a></li>
+               <li class="item_menu"><a href="#secao_sobre">Sobre nos</a></li>
+               <li class="item_menu"><a href="#secao_peso">Registre</a></li>
             </ul>
          </nav>
       </div>
@@ -45,7 +46,7 @@
       </div>
    </section>
    
-   <section class="secao_sobre">
+   <section class="secao_sobre" id="secao_sobre">
       <div class="container">
          <h2 class="titulo_sobre">Titulo aqui</h2>
          <p class="txt_sobre">Tempor amet in commodo sint sit laborum occaecat id consectetur est laborum. Nisi esse aliqua non
@@ -57,7 +58,7 @@
       </div>
    </section>
    
-   <section class="secao_peso">
+   <section class="secao_peso" id="secao_peso">
       <div class="container">
          <div class="conteudo_tabela">
             <table class="tabela">
