Criação de classe em elementos da tabela

--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
    
    <section class="secao_peso" id="secao_peso">
       <div class="container">
-         <div class="conteudo_tabela">
-            <table class="tabela">
+         <div class="conteudo_tabela_peso">
+            <table class="tabela_peso">
                <thead>
                   <th>Data</th>
                   <th>Nome</th>
                   <th>Peso</th>
                </thead>
                <tbody>
-                  <tr class="usuario">
-                     <td>Data atual</td>
-                     <td>Nome do usuario</td>
-                     <td>--</td>
+                  <tr class="usuario_tabela_peso">
+                     <td class="info_tabela_peso">Data atual</td>
+                     <td class="info_tabela_peso">Nome do usuario</td>
+                     <td class="info_tabela_peso">--</td>
                   </tr>
                </tbody>
             </table>
