Alteração em nome de tabela

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                </thead>
                <tbody>
                   <tr class="usuario_tabela_peso">
-                     <td class="info_tabela_peso">Data atual</td>
+                     <td class="info_tabela_peso">Data de registro</td>
                      <td class="info_tabela_peso">Nome do usuario</td>
                      <td class="info_tabela_peso">--</td>
                   </tr>
